# indico-plugin-payment-opencollective

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
indico_payment_opencollective/: __init__.py  blueprint.py  constants.py  controllers.py  plugin.py
indico_payment_opencollective/templates/: event_payment_form.html  transaction_details.html
indico_payment_opencollective/tests/: constants.py  controllers_test.py
tests/: constants.py  controllers_test.py
