[project]
name = "indico-plugin-payment-opencollective"
version = "0.1.1"
description = "Indico payment plugin for processing payment with Open Collective"
license = {text = "MIT License"}
authors = [{ name = 'Youngbin Han', email = 'ybhan@ubuntu.com' }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ['indico>=3.3', 'gql[requests]>=3.5.0']
classifiers = [
    'Environment :: Plugins',
    'Environment :: Web Environment',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]

[project.urls]
GitHub = 'https://github.com/sukso96100/indico-plugin-payment-opencollective'

[project.entry-points.'indico.plugins']
payment_opencollective = 'indico_payment_opencollective.plugin:OpenCollectivePaymentPlugin'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ['indico_payment_opencollective']
exclude = [
    '*.no-header',
    '.keep',
    # exclude original client sources (they are all included in source maps anyway)
    'indico_*/client/',
    # no need for tests outside development
    'test_snapshots/',
    'tests/',
    '*_test.py',
]
artifacts = [
    'indico_*/translations/**/messages-react.json',
    'indico_*/translations/**/*.mo',
    'indico_*/static/dist/',
]